--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@ header nav {
     <nav>
       <ul>
         <li>Detector Test</li>
-        <li><a href="example.html">Example VR World</a></li>
+        <li><a href="example.html">Sample Using Detector</a></li>
       </ul>
     </nav>
     <nav id="test">
