made re-entrant between VR and DOM on mobile

--- a/src/index.html
+++ b/src/index.html
@@ -3,25 +3,32 @@
 <head>
 <title>WebVRFeatureDetector</title>
 <meta charset="utf-8">
-<!--set the viewport, shrink-to-fit fixes safari bug-->
+<!--
+set the viewport, shrink-to-fit fixes safari bug
+-->
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.01 ,minimal-ui">
 <!--handle iOS and android mobile
 http://www.html5rocks.com/en/mobile/fullscreen/ -->
-<!--ios fullscreen-->
+<!--
+ios fullscreen
+-->
 <meta name="apple-mobile-web-app-capable" content="yes">
-<!--android fullscreen-->
+<!--
+android fullscreen
+-->
 <meta name="mobile-web-app-capable" content="yes">
-<!--hide the Apple status bar-->
+<!--
+hide the Apple status bar
+-->
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<!--CSS styles-->
+<!--
+CSS files
+-->
+<link rel="stylesheet" href="css/styles.css">
+<!--
+Additional CSS styles
+-->
 <style>
-#content article {
-
-}
-
-header nav {
-  display:inline-block;
-}
 
 #test h3 {
   display: inline;
